<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/workshop_detail_dialog">
        <!--Workshop name-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:textColor="#39393A"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/workshop_detail_label"
            android:shadowColor="#6BFFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop name-->
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/workshop_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/workshp_name_border"/>
        <TextView
            android:id="@+id/tv_workshop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <!--Workshop Owner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/owner"
            android:textSize="18sp"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold"
            android:background="@drawable/workshp_name_border"/>
        <TextView
            android:id="@+id/tv_workshop_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="facility_name"
            android:layout_marginHorizontal="5dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!--Workshop Address-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/address"
            android:layout_marginHorizontal="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/workshp_name_border"/>
        <TextView
            android:id="@+id/tv_workshop_address"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <!--Workshop ZIP code-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/zip_code"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/workshp_name_border"/>
        <TextView
            android:id="@+id/tv_workshop_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop License expiry data-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="@string/license_expiry"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/workshp_name_border"/>
        <TextView
            android:id="@+id/tv_workshop_license_expiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</layout>